--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -85,12 +85,12 @@
                                         <Font size="16.0" />
                                     </font>
                                 </JFXButton>
-                                <JFXButton fx:id="REST" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%restroom">
+                                <JFXButton fx:id="EXIT" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%exit">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
                                 </JFXButton>
-                                <JFXButton fx:id="DEPT" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%department">
+                                <JFXButton fx:id="REST" buttonType="RAISED" onAction="#onQuickClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%restroom">
                                     <font>
                                         <Font size="16.0" />
                                     </font>
