Provide buttons for api (#179)

--- a/src/main/resources/AdminSpecialOptions.fxml
+++ b/src/main/resources/AdminSpecialOptions.fxml
@@ -138,10 +138,12 @@
                </HBox.margin>
             </JFXButton>
             <JFXButton fx:id="modify_map_btn" buttonType="RAISED" onAction="#onModifyMapClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%modify_map" />
+            <JFXButton fx:id="it_request" buttonType="RAISED" onAction="#onITRequest" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%it_request" />
             <JFXComboBox fx:id="path_algorithm_box" onAction="#chooseAlgorithm" promptText="%choose_path_algorithm" style="-fx-font-size: 18;">
                <padding>
                   <Insets left="10.0" />
-               </padding></JFXComboBox>
+               </padding>
+            </JFXComboBox>
          </children>
       </HBox>
    </bottom>
