--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -40,44 +40,70 @@
             </right>
         </BorderPane>
     </top>
-    <center>
-        <ScrollPane fx:id="scroll_pane" pannable="true" prefHeight="690.0" prefWidth="900.0" BorderPane.alignment="CENTER">
-            <content>
-                <AnchorPane fx:id="pane" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick">
+   <bottom>
+      <BorderPane prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #4863A0;" BorderPane.alignment="CENTER">
+         <left>
+                <JFXComboBox fx:id="choose_floor" focusColor="#4863a0" onAction="#onChooseFloorChange" promptText="%choose_floor" style="-fx-font-size: 23; -fx-text-color: #ffffff;" BorderPane.alignment="CENTER">
+               <BorderPane.margin>
+                  <Insets left="20.0" />
+               </BorderPane.margin></JFXComboBox>
+         </left>
+         <center>
+                <JFXComboBox fx:id="location_or_path" focusColor="#4863a0" onAction="#onChooseAction" promptText="%location_or_path" style="-fx-font-size: 23;" BorderPane.alignment="CENTER" />
+         </center>
+         <right>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Label text="2D" textFill="WHITE">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                  </Label>
+                      <JFXToggleButton fx:id="toggle3D" alignment="BOTTOM_CENTER" onAction="#on3DToggle" text="3D" textFill="WHITE" toggleColor="#fafafa" toggleLineColor="#999999">
+                     <font>
+                        <Font size="23.0" />
+                     </font>
+                     <HBox.margin>
+                        <Insets left="-10.0" />
+                     </HBox.margin>
+                  </JFXToggleButton>
+               </children>
+            </HBox>
+         </right>
+      </BorderPane>
+   </bottom>
+   <center>
+      <StackPane prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+              <ScrollPane fx:id="scroll_pane" pannable="true" prefHeight="690.0" prefWidth="900.0">
+                  <content>
+                      <AnchorPane fx:id="pane" minHeight="0.0" minWidth="0.0" onMouseClicked="#onMouseClick">
+                          <children>
+                              <ImageView fx:id="map" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
+                                  <image>
+                                      <Image url="@images/2dMaps/01_thefirstfloor.png" />
+                                  </image>
+                              </ImageView>
+                          </children>
+                      </AnchorPane>
+                  </content>
+              </ScrollPane>
+                <StackPane alignment="TOP_CENTER" maxHeight="371.0" maxWidth="240.0" prefHeight="371.0" prefWidth="240.0" StackPane.alignment="TOP_LEFT">
                     <children>
-                        <ImageView fx:id="map" fitHeight="3400.0" fitWidth="5000.0" pickOnBounds="true" preserveRatio="true">
-                            <image>
-                                <Image url="@images/2dMaps/01_thefirstfloor.png" />
-                            </image>
-                        </ImageView>
-                    </children>
-                </AnchorPane>
-            </content>
-            <BorderPane.margin>
-                <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            </BorderPane.margin>
-        </ScrollPane>
-    </center>
-    <right>
-        <VBox alignment="TOP_CENTER" prefHeight="740.0" prefWidth="242.0" spacing="30.0" BorderPane.alignment="CENTER">
-            <children>
-                <JFXComboBox fx:id="location_or_path" focusColor="#4863a0" onAction="#onChooseAction" promptText="%location_or_path" style="-fx-font-size: 23;" />
-                <StackPane prefHeight="150.0" prefWidth="200.0">
-                    <children>
-                        <VBox fx:id="add_node_box" alignment="CENTER" prefHeight="389.0" prefWidth="242.0" spacing="15.0" visible="false">
+                        <VBox fx:id="add_node_box" alignment="TOP_CENTER" prefHeight="389.0" prefWidth="242.0" spacing="15.0" visible="false" StackPane.alignment="TOP_CENTER">
                             <children>
-                                <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0" promptText="%building">
+                                <JFXTextField fx:id="building" alignment="CENTER" focusColor="#4863a0" promptText="%building" style="-fx-background-color: #ffffff;">
                                     <font>
                                         <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXComboBox fx:id="loc_type" focusColor="#4863a0" promptText="%location_type" style="-fx-font-size: 23;" />
-                                <JFXTextField fx:id="long_name" alignment="CENTER" focusColor="#4863a0" promptText="%long_name">
+                                <JFXComboBox fx:id="loc_type" focusColor="#4863a0" promptText="%location_type" style="-fx-font-size: 23; -fx-background-color: #ffffff;" />
+                                <JFXTextField fx:id="long_name" alignment="CENTER" focusColor="#4863a0" promptText="%long_name" style="-fx-background-color: #ffffff;">
                                     <font>
                                         <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXTextField fx:id="short_name" alignment="CENTER" focusColor="#4863a0" promptText="%short_name">
+                                <JFXTextField fx:id="short_name" alignment="CENTER" focusColor="#4863a0" promptText="%short_name" style="-fx-background-color: #ffffff;">
                                     <font>
                                         <Font size="23.0" />
                                     </font>
@@ -88,17 +114,20 @@
                                     </font>
                                 </JFXButton>
                                 <JFXButton fx:id="add_loc_cancel" buttonType="RAISED" onAction="#onAddLocCancelClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" visible="false" />
-                                <Label fx:id="add_loc_fail" textFill="RED" />
+                                <Label fx:id="add_loc_fail" style="-fx-background-color: #ffffff;" textFill="RED" />
                             </children>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
                         </VBox>
-                        <VBox fx:id="add_edge_box" alignment="CENTER" spacing="20.0" visible="false">
+                        <VBox fx:id="add_edge_box" alignment="TOP_CENTER" maxHeight="250.0" spacing="20.0" visible="false" StackPane.alignment="TOP_CENTER">
                             <children>
-                                <JFXTextField fx:id="location_one" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one">
+                                <JFXTextField fx:id="location_one" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one" style="-fx-background-color: #ffffff;">
                                     <font>
                                         <Font size="23.0" />
                                     </font>
                                 </JFXTextField>
-                                <JFXTextField fx:id="location_two" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_two">
+                                <JFXTextField fx:id="location_two" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_two" style="-fx-background-color: #ffffff;">
                                     <font>
                                         <Font size="23.0" />
                                     </font>
@@ -106,10 +135,13 @@
                                 <JFXButton fx:id="add_edge" buttonType="RAISED" onAction="#onAddEdgeClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%add_edge" />
                                 <JFXButton fx:id="cancel_edge" buttonType="RAISED" onAction="#onCancelEdgeClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" />
                             </children>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
                         </VBox>
-                        <VBox fx:id="delete_loc_box" alignment="CENTER" spacing="20.0" visible="false">
+                        <VBox fx:id="delete_loc_box" alignment="TOP_CENTER" maxHeight="190.0" spacing="20.0" visible="false" StackPane.alignment="TOP_CENTER">
                             <children>
-                                <JFXTextField fx:id="location_to_delete" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one">
+                                <JFXTextField fx:id="location_to_delete" alignment="CENTER" editable="false" focusColor="#4863a0" promptText="%location_one" style="-fx-background-color: #ffffff;">
                                     <font>
                                         <Font size="23.0" />
                                     </font>
@@ -117,14 +149,20 @@
                                 <JFXButton fx:id="delete_loc" buttonType="RAISED" onAction="#onDeleteLocClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%delete_location" />
                                 <JFXButton fx:id="cancel_delete" buttonType="RAISED" onAction="#onDeleteLocCancelClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%cancel_edge" />
                             </children>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
                         </VBox>
-                  <VBox fx:id="delete_edge_box" alignment="CENTER" spacing="20.0" visible="false">
+                  <VBox fx:id="delete_edge_box" alignment="TOP_CENTER" maxHeight="115.0" spacing="20.0" visible="false" StackPane.alignment="TOP_CENTER">
                      <children>
                         <JFXButton fx:id="delete_edge" buttonType="RAISED" onAction="#onDeleteEdge" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Delete Edges" />
                         <JFXButton fx:id="cancel_delete_edge" buttonType="RAISED" onAction="#onCancelDeleteEdge" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Cancel" />
                      </children>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
                   </VBox>
-                  <VBox fx:id="batch_disable_box" alignment="CENTER" spacing="20.0" visible="false">
+                  <VBox fx:id="batch_disable_box" alignment="TOP_CENTER" maxHeight="115.0" spacing="20.0" visible="false" StackPane.alignment="TOP_CENTER">
                       <children>
                           <JFXButton fx:id="disable_selection" buttonType="RAISED" onAction="#disableNodesInPolygon" style="-fx-background-color: #B7B8B6;" text="%disable_location">
                               <font>
@@ -137,27 +175,33 @@
                               </font>
                           </JFXButton>
                       </children>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
                   </VBox>
-                        <VBox fx:id="modify_loc_box" alignment="CENTER" spacing="20.0" visible="false">
+                        <VBox fx:id="modify_loc_box" alignment="TOP_CENTER" maxHeight="115.0" spacing="20.0" visible="false" StackPane.alignment="TOP_CENTER">
                             <children>
                                 <JFXButton fx:id="confirm_new_loc" buttonType="RAISED" onAction="#onConfirmMove" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Confirm" />
                                 <JFXButton fx:id="cancel_move" buttonType="RAISED" onAction="#onCancelMove" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="Cancel" />
                             </children>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
                         </VBox>
-                  <VBox fx:id="modify_info_box" alignment="CENTER" prefHeight="389.0" prefWidth="242.0" spacing="15.0" visible="false">
+                  <VBox fx:id="modify_info_box" alignment="TOP_CENTER" maxHeight="325.0" prefHeight="389.0" prefWidth="242.0" spacing="15.0" visible="false" StackPane.alignment="TOP_CENTER">
                      <children>
-                        <JFXTextField fx:id="building_change" alignment="CENTER" focusColor="#4863a0" promptText="%building">
+                        <JFXTextField fx:id="building_change" alignment="CENTER" focusColor="#4863a0" promptText="%building" style="-fx-background-color: #ffffff;">
                            <font>
                               <Font size="23.0" />
                            </font>
                         </JFXTextField>
-                        <JFXComboBox fx:id="loc_type_change" focusColor="#4863a0" promptText="%location_type" style="-fx-font-size: 23;" />
-                        <JFXTextField fx:id="long_name_change" alignment="CENTER" focusColor="#4863a0" promptText="%long_name">
+                        <JFXComboBox fx:id="loc_type_change" focusColor="#4863a0" promptText="%location_type" style="-fx-font-size: 23; -fx-background-color: #ffffff;" />
+                        <JFXTextField fx:id="long_name_change" alignment="CENTER" focusColor="#4863a0" promptText="%long_name" style="-fx-background-color: #ffffff;">
                            <font>
                               <Font size="23.0" />
                            </font>
                         </JFXTextField>
-                        <JFXTextField fx:id="short_name_change" alignment="CENTER" focusColor="#4863a0" promptText="%short_name">
+                        <JFXTextField fx:id="short_name_change" alignment="CENTER" focusColor="#4863a0" promptText="%short_name" style="-fx-background-color: #ffffff;">
                            <font>
                               <Font size="23.0" />
                            </font>
@@ -167,27 +211,23 @@
                               <Font size="23.0" />
                            </font>
                         </JFXButton>
-                        <Label fx:id="add_loc_fail1" textFill="RED" />
                      </children>
+                     <StackPane.margin>
+                        <Insets />
+                     </StackPane.margin>
                   </VBox>
-                        <JFXTextField fx:id="kiosk_location_name" alignment="CENTER" focusColor="#4863a0" promptText="%location" visible="false">
+                        <JFXTextField fx:id="kiosk_location_name" alignment="CENTER" focusColor="#4863a0" promptText="%location" style="-fx-background-color: #ffffff;" visible="false">
                             <font>
                                 <Font size="23.0" />
                             </font>
                         </JFXTextField>
+                      <JFXButton fx:id="confirm_3d" buttonType="RAISED" onAction="#onConfirm3dClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%confirm_coord" visible="false" />
                     </children>
+               <StackPane.margin>
+                  <Insets left="10.0" top="10.0" />
+               </StackPane.margin>
                 </StackPane>
-                <JFXComboBox fx:id="choose_floor" focusColor="#4863a0" onAction="#onChooseFloorChange" promptText="%choose_floor" style="-fx-font-size: 23;" />
-                <JFXButton fx:id="confirm_3d" buttonType="RAISED" onAction="#onConfirm3dClick" style="-fx-font-size: 23; -fx-background-color: #B7B8B6;" text="%confirm_coord" visible="false" />
-                <JFXToggleButton fx:id="toggle3D" alignment="BOTTOM_CENTER" onAction="#on3DToggle" text="3D" toggleColor="#999999" toggleLineColor="#4863a0">
-               <font>
-                  <Font size="23.0" />
-               </font>
-            </JFXToggleButton>
-            </children>
-            <BorderPane.margin>
-                <Insets left="10.0" right="10.0" top="10.0" />
-            </BorderPane.margin>
-        </VBox>
-    </right>
+         </children>
+      </StackPane>
+   </center>
 </BorderPane>
