--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -70,6 +71,18 @@
                </children>
             </HBox>
          </right>
+         <bottom>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <children>
+                  <Circle fx:id="view_btn" fill="#b7b8b6" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fx:id="add_btn" fill="#b7b8b6" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fx:id="remove_btn" fill="#b7b8b6" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fx:id="modify_btn" fill="#b7b8b6" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fx:id="kiosk_btn" fill="#b7b8b6" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
+                  <Circle fx:id="batch_btn" fill="#b7b8b6" radius="40.0" stroke="BLACK" strokeType="INSIDE" />
+               </children>
+            </HBox>
+         </bottom>
       </BorderPane>
    </bottom>
    <center>
