Home screen map (#194)
* new map pop-up for selecting where to go, just a placeholder map/button. Not functional

* you can choose destination from a new window, which invokes pathfinding. *Node: currently closes current scene before switching which may cause problems later

* integrated new map into the homescreen, pathfinds

* Fixed broken edge

--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -118,6 +118,11 @@
                 <JFXComboBox fx:id="language_selector" focusColor="#4863a0" labelFloat="true" promptText="%language" style="-fx-font-size: 18; -fx-background-color: #ffffff;" />
                 <JFXButton buttonType="RAISED" onAction="#onLanguageChange" style="-fx-background-color: #B7B8B6; -fx-font-size: 18;" text="%confirm" />
             <JFXButton fx:id="about" onAction="#onAboutClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 18;" text="%about_page" />
+            <JFXButton fx:id="map" buttonType="RAISED" onAction="#onMapClick" style="-fx-background-color: #B7B8B6; -fx-font-size: 23;" text="%map">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+            </JFXButton>
             </children>
             <padding>
                 <Insets bottom="10.0" left="10.0" />
