--- a/src/main/resources/ModifyNodes.fxml
+++ b/src/main/resources/ModifyNodes.fxml
@@ -12,7 +12,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
@@ -348,6 +351,28 @@
                <StackPane.margin>
                   <Insets bottom="18.0" left="10.0" />
                </StackPane.margin></JFXComboBox>
+            <GridPane fx:id="button_pane" alignment="CENTER_RIGHT" maxHeight="400.0" maxWidth="100.0" StackPane.alignment="CENTER_RIGHT">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+               </rowConstraints>
+               <children>
+                  <JFXButton fx:id="floor_4" alignment="CENTER" buttonType="RAISED" onAction="#onFloorClick" opacity="0.9" prefHeight="60.0" prefWidth="80.0" style="-fx-text-fill: #ffffff; -fx-background-color: #4863A0; -fx-font-size: 30;" text="3" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.valignment="CENTER" />
+                  <JFXButton fx:id="floor_3" alignment="CENTER" buttonType="RAISED" onAction="#onFloorClick" opacity="0.9" prefHeight="60.0" prefWidth="80.0" style="-fx-text-fill: #ffffff; -fx-background-color: #4863A0; -fx-font-size: 30;" text="2" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                  <JFXButton fx:id="floor_2" alignment="CENTER" buttonType="RAISED" onAction="#onFloorClick" opacity="0.9" prefHeight="60.0" prefWidth="80.0" style="-fx-text-fill: #ffffff; -fx-background-color: #4863A0; -fx-font-size: 30;" text="1" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+                  <JFXButton fx:id="floor_1" alignment="CENTER" buttonType="RAISED" onAction="#onFloorClick" opacity="0.9" prefHeight="60.0" prefWidth="80.0" style="-fx-text-fill: #ffffff; -fx-background-color: #4863A0; -fx-font-size: 30;" text="L1" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                  <JFXButton fx:id="floor_0" alignment="CENTER" buttonType="RAISED" onAction="#onFloorClick" opacity="0.9" prefHeight="60.0" prefWidth="80.0" style="-fx-text-fill: #ffffff; -fx-background-color: #4863A0; -fx-font-size: 30;" text="L2" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+               </children>
+               <StackPane.margin>
+                  <Insets right="20.0" />
+               </StackPane.margin>
+            </GridPane>
          </children>
       </StackPane>
    </center>
