--- a/src/main/resources/HomepageMap.fxml
+++ b/src/main/resources/HomepageMap.fxml
@@ -2,8 +2,10 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -23,7 +25,7 @@
                <content>
                   <AnchorPane fx:id="map_anchor_pane" minHeight="0.0" minWidth="0.0">
                      <children>
-                        <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" onMouseClicked="#onMapClick" onMousePressed="#onMapClick" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fx:id="map_img" fitHeight="3400.0" fitWidth="5000.0" onMousePressed="#onMapClick" onMouseReleased="#onMapRelease" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@images/2dMaps/02_thesecondfloor.png" />
                            </image>
@@ -54,6 +56,17 @@
                   <Insets bottom="50.0" right="30.0" top="50.0" />
                </StackPane.margin>
             </GridPane>
+            <Slider fx:id="zoom_scroll" depthTest="DISABLE" majorTickUnit="0.2" max="2.0" maxHeight="20.0" maxWidth="180.0" min="0.5" minorTickCount="1" pickOnBounds="false" showTickMarks="true" style="-fx-background-color: #4863A0;" value="1.0" StackPane.alignment="TOP_LEFT">
+               <cursor>
+                  <Cursor fx:constant="DEFAULT" />
+               </cursor>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <StackPane.margin>
+                  <Insets left="20.0" top="20.0" />
+               </StackPane.margin>
+            </Slider>
          </children>
       </StackPane>
    </center>
