Fixed the admin page again srry

--- a/src/main/resources/AdminSpecialOptions.fxml
+++ b/src/main/resources/AdminSpecialOptions.fxml
@@ -123,7 +123,7 @@
       </GridPane>
    </center>
    <bottom>
-      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="600.0" spacing="20.0" BorderPane.alignment="CENTER">
          <children>
             <JFXTextField fx:id="timeout_field" alignment="CENTER" onKeyTyped="#onEnableSetButton" prefWidth="200.0" promptText="Timeout (sec)">
                <font>
@@ -144,32 +144,5 @@
             </JFXComboBox>
          </children>
       </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="600.0" spacing="20.0">
-               <children>
-                  <JFXTextField fx:id="timeout_field" alignment="CENTER" onKeyTyped="#onEnableSetButton" prefWidth="200.0" promptText="Timeout (sec)">
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                  </JFXTextField>
-                  <JFXButton fx:id="set_timeout_btn" buttonType="RAISED" layoutX="215.0" layoutY="41.0" onAction="#onSetTimeoutClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%set" visible="false">
-                     <HBox.margin>
-                        <Insets right="20.0" />
-                     </HBox.margin>
-                  </JFXButton>
-                  <JFXButton fx:id="modify_map_btn" buttonType="RAISED" onAction="#onModifyMapClick" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%modify_map" />
-                  <JFXComboBox fx:id="path_algorithm_box" onAction="#chooseAlgorithm" promptText="%choose_path_algorithm" style="-fx-font-size: 18;">
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </JFXComboBox>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="20.0">
-               <children>
-                  <JFXButton fx:id="it_request" buttonType="RAISED" onAction="#onITRequest" style="-fx-font-size: 18; -fx-background-color: #B7B8B6;" text="%it_request" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
    </bottom>
 </BorderPane>
